FIO-2546 Fixed focus outline of builder modal buttons, which were not fully visible for Content component

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -106,9 +106,11 @@ span[role="link"] {
 }
 
 .formio-dialog.formio-dialog-theme-default {
-  & .formio-dialog-content {
-    padding: 1.5em 1em 1em !important;
+  & .component-edit-container {
+    padding: 0.6em;
+  }
 
+  & .formio-dialog-content {
     & .formio-dialog-close {
       right: 4px;
       top: 4px;
